修改 ETF 搜尋 拉霸到極值不應顯示所有產品筆數
- 滑桿之間保持最小距離

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -186,6 +186,7 @@
                 // 拉霸
                 $('[data-slider-bar="size"]').sliderBar({
                     start: [0, 302],
+                    margin: 5,
                     connect: true,
                     range: {
                         'min': [0, 2],
@@ -208,6 +209,7 @@
                 $('[data-slider-bar="returnRate"]').sliderBar({
                     start: [-5, 20],
                     step: 5,
+                    margin: 5,
                     connect: true,
                     range: {
                         'min': -5,
@@ -224,6 +226,7 @@
                 $('[data-slider-bar="sharpe"]').sliderBar({
                     start: [-0.5, 2],
                     step: 0.5,
+                    margin: 0.5,
                     connect: true,
                     range: {
                         'min': -0.5,
@@ -238,6 +241,7 @@
                 $('[data-slider-bar="beta"]').sliderBar({
                     start: [-0.5, 2],
                     step: 0.5,
+                    margin: 0.5,
                     connect: true,
                     range: {
                         'min': -0.5,
@@ -252,6 +256,7 @@
                 $('[data-slider-bar="standardDeviation"]').sliderBar({
                     start: [0, 25],
                     step: 5,
+                    margin: 5,
                     connect: true,
                     range: {
                         'min': 0,
