--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -449,7 +449,7 @@
 </script>
 
 <script>
-    const USStockList = @Model.USStockHtmlString;
+    const USStockList = @(Model.USStockHtmlString);
 
     (function ($, window, document, undefined) {
         document.addEventListener('DOMContentLoaded', function () {
@@ -592,6 +592,16 @@
             });
 
             $(function () {
+                let autoData = USStockList.sort((a, b) => {
+                    if (a.FirstBankCode < b.FirstBankCode) {
+                        return -1;
+                    } else if (a.FirstBankCode > b.FirstBankCode) {
+                        return 1;
+                    }
+                    // a must be equal to b
+                    return 0;
+                });
+
                 // 關鍵字搜尋 autocomplete，參考套件：https://github.com/devbridge/jQuery-Autocomplete
                 $('#keyword').autocomplete({
                     noCache: true,
@@ -605,9 +615,9 @@
                     lookup: function (query, done) {
                         query = query.replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, "\\$&");
                         if (query.length == 0) {
-                            result = USStockList.slice(0, 5);
+                            result = autoData.slice(0, 5);
                         } else {
-                            result = USStockList.filter(function (item) {
+                            result = autoData.filter(function (item) {
                                 return new RegExp(query, 'gi').test(item.value);
                             }).slice(0, 5);
                         }
