--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
@@ -180,7 +180,18 @@
 
                     setTimeout(() => {
                         $('#downloadPdf').removeAttr('style');
-                        generatePDF(type);
+
+                        if ($(window).width() < 1199) {
+                            if ($(window).width() < 768) {
+                                $('#resultContent').css('padding-bottom', '10px');
+
+                                generateMBPDF(type, 1.3);
+                            } else {
+                                generateMBPDF(type, 1.15);
+                            }
+                        } else {
+                            generatePCPDF(type);
+                        }
                     }, 2500);
                 }
             });
@@ -787,15 +798,15 @@
             }
             //#endregion
 
-            //#region 試算結果生成PDF
-            async function generatePDF(type) {
+            //#region 電腦版試算結果生成PDF
+            async function generatePCPDF(type) {
                 const { jsPDF } = window.jspdf;
                 const pdf = new jsPDF();
                 const resultDescription = document.querySelector('#resultDescription');
                 const downloadPdfWrap = document.querySelectorAll('.downloadPdf_Wrap');
 
                 // 定義函數將 DOM 元素轉換為圖片並新增至 PDF
-                async function addElementToPDF(element, pdf, pdfWidth, imgeHight, bgColor, yOffset = 0) {
+                async function addPCElementToPDF(element, pdf, pdfWidth, imgeHight, bgColor, yOffset = 0) {
                     try {
                         // 使用 dom-to-image 直接將元素轉換為圖片
                         const dataUrl = await domtoimage.toPng(element, { quality: 1, height: imgeHight, bgcolor: bgColor });
@@ -827,19 +838,148 @@
                 const pdfWidth = pdf.internal.pageSize.getWidth();
 
                 // 處理 resultDescription 和 downloadPdf_Wrap 的第一個 div
-                let yOffset = await addElementToPDF(resultDescription, pdf, pdfWidth);
+                let yOffset = await addPCElementToPDF(resultDescription, pdf, pdfWidth);
                 if (downloadPdfWrap.length > 0) {
                     const firstDiv = downloadPdfWrap[0];
-                    yOffset = await addElementToPDF(firstDiv, pdf, pdfWidth, 1200, '#FFFFFF', yOffset);
+                    yOffset = await addPCElementToPDF(firstDiv, pdf, pdfWidth, 1200, '#FFFFFF', yOffset);
                 }
 
                 // 處理 downloadPdf_Wrap 其餘的 div，每個 div 獨立成頁
                 for (let i = 1; i < downloadPdfWrap.length; i++) {
                     pdf.addPage();
-                    await addElementToPDF(downloadPdfWrap[i], pdf, pdfWidth, 1200, '#FFFFFF');
+                    await addPCElementToPDF(downloadPdfWrap[i], pdf, pdfWidth, 1200, '#FFFFFF');
                 }
 
                 // 下載產生的 PDF
+                pdf.save(`${type}.pdf`);
+
+                $('#downloadPdf').css('visibility', 'hidden');
+                $('#downloadPdf').empty();
+                window.loading('hide');
+            }
+            //#endregion
+
+            //#region 手機板試算結果生成PDF
+            async function generateMBPDF(type, reduction) {
+                const { jsPDF } = window.jspdf;
+                const pdf = new jsPDF();
+                const resultDescription = document.querySelector('#resultDescription');
+                const downloadPdfWrap = document.querySelectorAll('.downloadPdf_Wrap');
+
+                // 定義函數將 DOM 元素轉換為圖片並新增至 PDF
+                async function addMBElementToPDF(element, pdf, pdfWidth, bgColor, yOffset = 0, newHeight = null) {
+                    try {
+                        // 如果传递了新的高度，调整元素高度
+                        if (newHeight) {
+                            element.style.height = `${newHeight}px`;
+                        }
+
+                        // 使用 dom-to-image 將元素轉換為圖片
+                        const dataUrl = await domtoimage.toPng(element, { quality: 1, bgcolor: bgColor });
+                        const img = new Image();
+                        img.src = dataUrl;
+
+                        return new Promise((resolve, reject) => {
+                            img.onload = () => {
+                                const imgProps = pdf.getImageProperties(dataUrl);
+                                const pdfHeight = ((imgProps.height * pdfWidth) / imgProps.width) / reduction;
+
+                                // 計算 xOffset 使圖片置中
+                                const xOffset = (pdf.internal.pageSize.getWidth() - pdfWidth) / 2;
+
+                                // 處理頁面溢出
+                                if (yOffset + pdfHeight > pdf.internal.pageSize.getHeight()) {
+                                    pdf.addPage();
+                                    yOffset = 0;
+                                }
+                                pdf.addImage(dataUrl, 'PNG', xOffset, yOffset, pdfWidth, pdfHeight);
+                                yOffset += pdfHeight;
+                                resolve(yOffset);
+                            };
+                            img.onerror = reject;
+                        });
+                    } catch (error) {
+                        console.error('生成元素图片时出错:', element, error);
+                    } finally {
+                        if (newHeight) {
+                            element.style.height = '';
+                        }
+                    }
+                }
+
+                // PDF 頁面寬度
+                const pdfWidth = pdf.internal.pageSize.getWidth() / reduction;
+
+                // 如果是手機，先處理 resultDescription 單獨一頁
+                await addMBElementToPDF(resultDescription, pdf, pdfWidth);
+
+                // 處理每個 downloadPdfWrap 中指定的元素，每個單獨生成一頁
+                for (let i = 0; i < downloadPdfWrap.length; i++) {
+                    const wrap = downloadPdfWrap[i];
+
+                    // 找到第一個 c-section
+                    const mainCSection = wrap.querySelector('.c-section');
+
+                    if (mainCSection) {
+
+                        if($(window).width() < 768) {
+                            // mainCSection 中的第一個 c-section 單獨一頁
+                            const firstCSection = mainCSection.querySelector('.c-section');
+                            if (firstCSection) {
+                                pdf.addPage();
+                                await addMBElementToPDF(firstCSection, pdf, pdfWidth, '#FFFFFF');
+                            }
+
+                            // l-calcCharts__item--1of3 單獨一頁
+                            const calcItem1 = wrap.querySelector('.l-calcCharts__item--1of3');
+                            if (calcItem1) {
+                                pdf.addPage();
+                                await addMBElementToPDF(calcItem1, pdf, pdfWidth, '#FFFFFF');
+                            }
+                        } else {
+                            // mainCSection 中的第一個 c-section 和l-calcCharts__item--1of3 同一頁
+                            const firstCSection = mainCSection.querySelector('.c-section');
+                            const calcItem1 = wrap.querySelector('.l-calcCharts__item--1of3');
+                            if (firstCSection && calcItem1) {
+                                pdf.addPage();
+
+                                let yOffset = 0;
+
+                                if (firstCSection) {
+                                    yOffset = await addMBElementToPDF(firstCSection, pdf, pdfWidth, '#FFFFFF', yOffset);
+                                }
+
+                                yOffset += 20;
+
+                                if (calcItem1) {
+                                    yOffset = await addMBElementToPDF(calcItem1, pdf, pdfWidth, '#FFFFFF', yOffset);
+                                }
+                            }
+                        }
+
+                        // l-calcCharts__item--2of3 和 l-revenueResult__notes 同一頁
+                        const calcItem2 = wrap.querySelector('.l-calcCharts__item--2of3');
+                        const note = wrap.querySelector('.l-revenueResult__notes');
+
+                        if (calcItem2 && note) {
+                            pdf.addPage(); 
+
+                            let yOffset = 0;
+
+                            if (calcItem2) {
+                                yOffset = await addMBElementToPDF(calcItem2, pdf, pdfWidth, '#FFFFFF', yOffset);
+                            }
+
+                            yOffset += 2;
+
+                            if (note) {
+                                yOffset = await addMBElementToPDF(note, pdf, pdfWidth, '#FFFFFF', yOffset, 60);
+                            }
+                        }
+                    }
+                }
+
+                // 最後合併的 PDF 文件進行下載
                 pdf.save(`${type}.pdf`);
 
                 $('#downloadPdf').css('visibility', 'hidden');
