--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -618,7 +618,7 @@
                                         <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
                                         <td class="c-cardTable__space"></td>
                                         <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
-                                        <td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
+                                        <td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "1/2" : "1/1")">
                                             <div class="c-cardTable__content">
                                                 <ul class="l-collect l-collect--divider@lt">
                                                     <li class="l-collect__item">
@@ -627,7 +627,7 @@
                                                 </ul>
                                             </div>
                                         </td>
-                                        <td class="c-cardTable__footer" data-card-table-width="1/3">
+                                        <td class="c-cardTable__footer" data-card-table-width="1/2">
                                             <div class="c-cardTable__content">
                                                 @if (item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability)))
                                                 {
@@ -839,7 +839,7 @@
                                         <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
                                         <td class="c-cardTable__space"></td>
                                         <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
-                                        <td class="c-cardTable__footer" data-card-table-width="@((item.OpenToPublic == "Y" && item.Listed == "Y")) ? "2/3" : "1/1")">
+                                        <td class="c-cardTable__footer" data-card-table-width="@((item.OpenToPublic == "Y" && item.Listed == "Y") ? "1/2" : "1/1")">
                                             <div class="c-cardTable__content">
                                                 <ul class="l-collect l-collect--divider@lt">
                                                     <li class="l-collect__item">
@@ -848,7 +848,7 @@
                                                 </ul>
                                             </div>
                                         </td>
-                                        <td class="c-cardTable__footer" data-card-table-width="1/3">
+                                        <td class="c-cardTable__footer" data-card-table-width="1/2">
                                             <div class="c-cardTable__content">
                                                 @if (item.OpenToPublic == "Y" && item.Listed == "Y")
                                                 {
