Update：ETF 搜尋－於搜尋欄位輸入關鍵字時，autocomplete 的標的排序邏輯從6個月績效改為產品名稱

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -528,7 +528,7 @@
                             return query.length == 0 || new RegExp(query, 'gi').test(item.value);
                         });
                         done({
-                            suggestions: result.slice(0, 5)
+                            suggestions: result.slice(0, 5).sort((a, b) => (a.value > b.value ? 1 : -1))
                         });
                     },
                     onSearchComplete: function (query, suggestions) {
