Update : 修正資料載入完成前，沒有續顯示loading遮罩畫面之問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
@@ -568,6 +568,8 @@
 
                 let fjs;
 
+                window.loading = () => 0;//蓋掉window.loading function
+
                 function initFilter(data) {
                     let opts = {
                         template: '#uid-template',
@@ -756,8 +758,10 @@
                         console.log(errorThrown);
                         $('[data-filter-empty="true"]').show();
                         $('[data-filter-empty="false"]').hide();
+                        $('.c-loading').loading('hide')
                     }).always(function () {
-                        window.loading('hide');
+                        $('.c-loading').loading('hide');
+                        window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
                     });
                 }
 
