ETF、基金詳細頁帶querystring切換Tab

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -257,4 +257,11 @@
             });
         });
     }
+
+(function ($, window, document, undefined) {
+    document.addEventListener('DOMContentLoaded', function () {
+        window.activateTabFromUrl();
+    });
+})(jQuery, window, document);
+
 </script>
