--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -853,6 +853,15 @@
             });
         });
 
+         window.activateTabFromUrl = function() {
+            let url = new URL(location.href);
+            var tabParam = url.searchParams.get('tab');
+            var activeTab = `tab-${tabParam}`;   
+        if (tabParam) {      
+            $(`[data-tab-target=${activeTab}]`).trigger('click');
+        }
+    };
+
     })(jQuery, window, document);
 </script>
 @Xcms.Sitecore.Foundation.Assets.Services.RenderAssetsService.Current.ScriptsRender("<script type=\"text/javascript\" src=\"{0}\" async ></script>", "/themes/project/wealth/js/utm.min.js")
