--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -853,14 +853,14 @@
             });
         });
 
-         window.activateTabFromUrl = function() {
+        window.activateTabFromUrl = function () {
             let url = new URL(location.href);
-            var tabParam = url.searchParams.get('tab');
-            var activeTab = `tab-${tabParam}`;   
-        if (tabParam) {      
-            $(`[data-tab-target=${activeTab}]`).trigger('click');
-        }
-    };
+            let tabParam = url.searchParams.get('tab');
+            if(tabParam){
+                let activeTab = `tab-${tabParam}`;
+                $(`[data-tab-target=${activeTab}]`).trigger('click');
+            }            
+        };
 
     })(jQuery, window, document);
 </script>
