--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -288,6 +288,8 @@
     </div>
 </div>
 
+@Html.Sitecore().Placeholder("ManagerConsultList")
+
 <div id="popupDetail" class="c-modal mfp-hide">
     <div class="c-modal__wrap">
         <header class="c-modal__header">
