取消預設高度

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
@@ -147,7 +147,7 @@
                 <div class="l-flex__item"></div>
             </section>
         </div>
-        <iframe id="SysJustIFRAME" width="100%" scrolling="no" frameborder="0" style="border:none; height:1500px"></iframe>
+        <iframe id="SysJustIFRAME" width="100%" scrolling="no" frameborder="0" style="border:none;"></iframe>
         @if (Model.BondDetail.HotProductTags != null && Model.BondDetail.HotProductTags.Any())
         {
             <div class="c-hashTags">
